# Final-Project-Struktur_Data_dan_Pemrograman_Berorientasi_Objek-TransportationRouteRecommendation-05

./: CMakeLists.md  CMakeLists.txt  IMPLEMENTATION_COMPLETE.md  Makefile  PANDUAN.md  QUICK_GUIDE.md  QUICK_START.md  README.md  build.bat  build_demo.bat  build_interactive.bat  clean.bat  cleanup_project.bat  demo_complete_system.cpp  demo_network.csv  gitignore  gitignore.md  jakarta_interactive_map.html  jakarta_map.html  jakarta_map_simple.html  jakarta_stations_coordinates.csv  main_simple.cpp  minimal_build_test.bat  network_data.csv  quick_test.bat  run.bat  run_system_tests.cpp  sample_map.html  standalone_transport_system.cpp  test_algorithms.cpp  test_algorithms_simple.cpp  test_basic.cpp  test_complex_route.txt  test_export.csv  test_input.txt  test_multi_station.txt  test_node_simple.cpp  test_prefs.json
config/: default_config.txt  system_settings.conf  user_preferences.json
data/: jakarta_stations_coordinates.csv
data/sample_data/: bandung.csv  jakarta.csv  surabaya.csv
data/templates/: config_template.conf  network_template.csv  preferences_template.json
data/test_data/: large_graph.csv  medium_graph.csv  small_graph.csv
docs/: CLEANUP_SUMMARY.md  ENHANCED_FEATURES.md  FINAL_DEMO.md  FINAL_STATUS.md  FIXED_MAP_FEATURES.md  INTEGRASI_COMPLETE.md  Makefile.md  PROJECT_COMPLETE.md  README.md  SOLUTION_SUMMARY.md  STANDALONE_GUIDE.md
include/algorithms/: DijkstraStrategy.h  PathFinder.h  RouteStrategy.h
include/core/: Edge.h  Edge.h.bak  Graph.h  Node.h  Node.h.bak  TransportationSystem.h
include/io/: CSVHandler.h  ConfigManager.h  FileManager.h  JSONHandler.h
include/preferences/: DecisionTree.h  MultiCriteriaScoring.h  PreferenceManager.h  UserPreferences.h
include/ui/: ConsoleInterface.h  MenuSystem.h  Visualizer.h
include/utils/: Common.h  Logger.h  StringUtils.h  Validator.h
include/visualization/: WebMapGenerator.h
scripts/: build.bat  build.sh  build_standalone.bat  demo_complete.bat  run_fixed_system.bat  run_integrated_system.bat  run_jakarta_system.bat  setup_and_build.bat
src/: main_broken.cpp  main_clean.cpp  main_new.cpp  standalone_transport_system.cpp
src/algorithms/: DijkstraStrategy.cpp  PathFinder.cpp  RouteStrategy.cpp
src/core/: Edge.cpp  Graph.cpp  Node.cpp  TransportationSystem.cpp
src/io/: CSVHandler.cpp  ConfigManager.cpp  FileManager.cpp  JSONHandler.cpp
src/preferences/: DecisionTree.cpp  MultiCriteriaScoring.cpp  UserPreferences.cpp
src/ui/: ConsoleInterface.cpp  MenuSystem.cpp  Visualizer.cpp
src/utils/: Logger.cpp  StringUtils.cpp  Validator.cpp
src/visualization/: WebMapGenerator_broken.cpp  WebMapGenerator_new.cpp
tests/: integration_test.json  test_implementations.cpp  test_main.cpp
(+6 files in other folders)
